<resources>
    <string name="app_name">Syte</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="found_address_lbl">We found following address.\n Please confirm or change</string>
    <string name="found_location_lbl">\nWhat is the position of your Syte?\n</string>
    <string name="favourite_sytes_not_available">You do not have any favourite Syte.</string>
    <string name="owned_sytes_not_available">You do not have any Syte.</string>
    <string name="addBulletin_topbar_heading">Add Bulletin</string>
    <string name="addBulletin_subject">Title</string>
    <string name="addBulletin_description">Description</string>
    <string name="addBulletin_snd_all_followers">Send to all followers</string>
    <string name="prg_bar_wait">Please wait</string>
    <string name="err_msg_error_occurred">Error occurred. Please try again.</string>
    <string name="tnc_popup_subject">Terms &amp; Conditions</string>
    <string name="tnc_popup_conditions">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="mob_num_entry_lbl1">Mobile Number</string>
    <string name="mob_num_entry_hint">Enter your mobile number</string>
    <string name="mob_num_entry_lbl3">Syte will send an SMS to verify your phone number.Carrier SMS charges may apply</string>
    <string name="err_msg_mob_num_empty">Enter your mobile number</string>
    <string name="err_msg_mob_num_invalid">Enter a valid mobile number</string>
    <string name="otp_verification_screen_title">Verify your mobile number</string>
    <string name="otp_verification_lbl1">A verification code have been sent to your mobile number. Your code is valid for 3 minutes</string>
    <string name="otp_verification_resend">Re-send verification code again</string>
    <string name="err_msg_veification_code_invalid">Enter valid OTP</string>
    <string name="err_msg_veification_code_expired">Your OTP is expired. Regenerate it again</string>
    <string name="err_msg_veification_code_wrong">You have entered wrong OTP. Enter correct OTP.</string>
    <string name="signup_screen_title">Congrats! You\'re verified</string>
    <string name="signup_screen_lbl_tc">By signing up, I agree to the Term and Condition</string>
    <string name="signup_screen_lbl_name">Name</string>
    <string name="mob_num_name_hint">Enter your full name</string>
    <string name="signup_screen_lbl_profile">Profile Picture</string>
    <string name="err_msg_user_name_invalid">Enter your full name</string>
    <string name="signup_screen_lbl_gender">Gender</string>
    <string name="title_activity_maps">Map</string>
    <string name="home_bulletin_screen_page_title">Bulletins</string>
    <string name="home_bulletin_screen_no_data_data_found">"No Sytes found near you.</string>
    <string name="home_bulletin_screen_i_am_lucky">I\'M FEELING LUCKY</string>
    <string name="map_screen_page_title">Map</string>
    <string name="map_screen_search_box_lbl1">Search For Places Nearby</string>
    <string name="map_screen_search_box_hint">Search category, name</string>
    <string name="map_screen_pin_info_box_recent_bulletin">Recent Bulletin:</string>
    <string name="map_screen_pin_info_box_no_recent_bulletin">No recent bulletin</string>
    <string name="my_sytes_screen_page_title">My Sytes</string>
    <string name="my_sytes_screen_add_syte_lbl">ADD NEW SYTE</string>
    <string name="my_favourite_sytes_screen_page_title">My Favourite Sytes</string>
    <string name="my_friends_screen_page_title">Friends</string>
    <string name="my_messages_screen_page_title">My Messages</string>
    <string name="my_messages_tab_1_title">My Chats</string>
    <string name="my_messages_tab_2_title">My Syte\'s Chats</string>
    <string name="contact_support_screen_page_title">Contact Support</string>
    <string name="settings_screen_page_title">Settings</string>
    <string name="settings_notification_lbl_txt">Turn off notification</string>
    <string name="settings_notification_txt_on">Notification on</string>
    <string name="settings_notification_txt_off">Notification off</string>
    <string name="settings_send_feedback_lbl_txt">Send feedback</string>
    <string name="settings_send_feedback_txt">Send feedback</string>
    <string name="settings_app_version_lbl_txt">App version</string>
    <string name="settings_walkthrough_lbl_txt">Help</string>
    <string name="settings_walkthrough_txt">Help</string>
    <string name="notification_screen_page_title">Activity</string>
    <string name="add_syte_location_page_title">Where is your syte?</string>
    <string name="add_syte_location_page_map_property_window_msg">Adjust the map to pin your Syte in exact location</string>
    <string name="add_syte_address_page_title">Check your Syte address</string>
    <string name="add_syte_address_page_top_lable">We found following address.\nPlease confirm or change.</string>
    <string name="add_syte_address_page_lbl1">Address 1</string>
    <string name="add_syte_address_page_hint_et1">Door number, street name etc</string>
    <string name="add_syte_address_page_lbl2">Address 2 (Optional)</string>
    <string name="add_syte_address_page_hint_et2">Area name</string>
    <string name="add_syte_address_page_lbl3">City</string>
    <string name="add_syte_address_page_hint_et3">E.g. Bengaluru</string>
    <string name="add_syte_address_page_lbl4">State</string>
    <string name="add_syte_address_page_hint_et4">E.g. Karnataka</string>
    <string name="add_syte_address_page_lbl5">Country</string>
    <string name="add_syte_address_page_hint_et5">E.g. India</string>
    <string name="add_syte_address_page_lbl6">Zip code</string>
    <string name="add_syte_address_page_hint_et6">E.g. 560097</string>
    <string name="err_syte_address_page_empty_add1">Enter Syte\'s address</string>
    <string name="err_syte_address_page_empty_city">Enter Syte\'s city</string>
    <string name="err_syte_address_page_empty_state">Enter Syte\'s state</string>
    <string name="err_syte_address_page_empty_country">Enter Syte\'s country</string>
    <string name="err_syte_address_page_empty_zip_code">Enter Syte\'s zip code</string>
    <string name="err_syte_address_page_empty_address">We could not get your Syte\'s address.\nPlease enter your Syte\'s address</string>
    <string name="add_syte_details_page_title">Your Syte details</string>
    <string name="add_syte_details_page_top_lable"><b>You are almost there!</b>\nJust a few more steps before we make your Syte\navailable to the entire world</string>
    <string name="add_syte_details_page_Syte_type_lbl">What is the type of Syte?</string>
    <string name="add_syte_details_page_type_private">Private</string>
    <string name="add_syte_details_page_type_public">Public</string>
    <string name="add_syte_details_page_lbl1">What is the name of this location?</string>
    <string name="add_syte_details_page_hint_et1">Enter your Syte name</string>
    <string name="add_syte_details_page_lbl2">Go ahead.. add multiple categories</string>
    <string name="add_syte_details_page_hint_et2">Enter your Syte categories e.g. Hotel,Cloth etc..</string>
    <string name="add_syte_details_page_lbl3">What is the phone number for this location?</string>
    <string name="add_syte_details_page_hint_et3">Enter your mobile number</string>
    <string name="add_syte_details_page_lbl4">What is the email id for this syte?</string>
    <string name="add_syte_details_page_hint_et4">Enter your email id</string>
    <string name="add_syte_details_page_lbl5">What is the website for the syte?</string>
    <string name="add_syte_details_page_hint_et5">Enter your website</string>
    <string name="err_syte_details_page_empty_name">Enter Syte\'s name</string>
    <string name="err_syte_details_page_empty_category">Enter Syte\'s category</string>
    <string name="err_syte_details_page_empty_mobile_num">Enter Syte\'s mobile number</string>
    <string name="err_syte_details_page_empty_email_id">Enter Syte\'s email id</string>
    <string name="err_syte_details_page_empty_web_site">Enter Syte\'s website address</string>
    <string name="add_syte_optional_details_page_title">Optional details</string>
    <string name="add_syte_optional_details_page_btn_preview">PREVIEW</string>
    <string name="add_syte_optional_details_page_btn_publish">PUBLISH</string>
    <string name="add_syte_optional_details_page_lbl1_unit1">About us</string>
    <string name="add_syte_optional_details_page_lbl2_unit1">Write details about this location, history, story..</string>
    <string name="add_syte_optional_details_page_lbl1_unit2">Our team</string>
    <string name="add_syte_optional_details_page_lbl2_unit2">Add your team members\' details here..</string>
    <string name="add_syte_optional_details_page_lbl1_unit3">What we do</string>
    <string name="add_syte_optional_details_page_lbl2_unit3">This location sells products? Provide services?</string>
    <string name="err_syte_optional_details_page_empty_syte_pic">Set Syte banner</string>
    <string name="add_syte_about_us_page_title">About us</string>
    <string name="add_syte_about_us_page_lbl1">Title</string>
    <string name="add_syte_about_us_page_hint_et1">About us</string>
    <string name="add_syte_about_us_page_lbl2">Write a description about this location</string>
    <string name="add_syte_about_us_page_hint_et2">Write a description about this location. E.g. When was this place established? What makes this space unique? Are there other details you would like to share?</string>
    <string name="err_syte_about_us_page_empty_title">Enter about us title</string>
    <string name="err_syte_about_us_page_empty_description">Enter description</string>
    <string name="add_syte_wwd_page_title">What we do</string>
    <string name="add_syte_wwd_page_lbl1">Title</string>
    <string name="add_syte_wwd_page_hint_et1">What we do</string>
    <string name="add_syte_wwd_page_lbl2">Description</string>
    <string name="add_syte_wwd_page_hint_et2">Write about what kind of products does this location sell? Provided services</string>
    <string name="err_syte_wwd_page_empty_title">Enter about us title</string>
    <string name="err_syte_wwd_page_empty_description">Enter description</string>
    <string name="add_syte_tm_mem_page_title">Our team members</string>
    <string name="add_syte_tm_mem_page_btn_save">ADD NEW TEAM  MEMBER</string>
    <string name="add_syte_add_tm_mem_page_title">Add new member</string>
    <string name="add_syte_add_tm_mem_page_btn_save">SAVE</string>
    <string name="add_syte_add_tm_mem_page_lbl1">Name</string>
    <string name="add_syte_add_tm_mem_page_hint_et1">Enter member name</string>
    <string name="add_syte_add_tm_mem_page_lbl2">Designation</string>
    <string name="add_syte_add_tm_mem_page_hint_et2">Enter designation</string>
    <string name="add_syte_add_tm_mem_page_lbl3">Profile</string>
    <string name="add_syte_add_tm_mem_page_hint_et3">Enter profile</string>
    <string name="edit_syte_details_page_title">Edit Syte details</string>
    <string name="edit_syte_details_page_top_lable">Update Syte\'s name, category, phone number, email id and website</string>
    <string name="reward_points">points</string>
    <string name="reward_level">Level</string>
    <string name="reward_level_6">Expert</string>
    <string name="reward_level_6_points">1000</string>
</resources>