<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/xRelLayMain"
    android:background="@color/color_white">
    <!--TOP BAR-->
    <RelativeLayout
        android:id="@+id/xRellayTop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_ht"
        android:background="?attr/colorPrimary"
        android:padding="@dimen/toolbar_padding">
        <RelativeLayout
            android:id="@+id/xRelLayBack"
            android:layout_width="@dimen/toolbar_icon_sz"
            android:layout_height="@dimen/toolbar_icon_sz"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true">
            <ImageView
                android:layout_width="@dimen/toolbar_icon_content_sz"
                android:layout_height="@dimen/toolbar_icon_content_sz"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_action_bar_back_btn"/>
        </RelativeLayout>
        <com.syte.widgets.TvRobortoRegular
            android:id="@+id/xPageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="56dp"
            android:textSize="@dimen/toolbar_lbl_sz"
            android:textColor="@color/color_white"
            android:text="@string/add_syte_about_us_page_title"
            android:layout_centerVertical="true"
            android:singleLine="true"
            android:layout_toLeftOf="@+id/xRelLayForward"
            android:paddingRight="@dimen/toolbar_icon_margin"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_btm_shadow_sz"
        android:background="@drawable/shadow"
        android:layout_below="@+id/xRellayTop"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/xRellayTop"
        android:layout_above="@+id/xTvSave"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/add_syte_address_page_padding"
            android:paddingRight="@dimen/add_syte_address_page_padding"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/add_syte_address_page_vertical_margin"
            android:paddingBottom="@dimen/add_syte_address_page_vertical_margin">
            <com.syte.widgets.EditTextLblMedium
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_syte_about_us_page_lbl1"/>
            <com.syte.widgets.EtRobortoRegularMedium
                android:id="@+id/xEtAboutUsTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:ems="6"
                android:hint="@string/add_syte_about_us_page_hint_et1"
                android:layout_marginBottom="@dimen/add_syte_address_page_vertical_margin"/>
            <com.syte.widgets.EditTextLblMedium
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_syte_about_us_page_lbl2"/>
            <com.syte.widgets.EtRobortoRegularMedium
                android:id="@+id/xEtAboutUsBody"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="6"
                android:hint="@string/add_syte_about_us_page_hint_et2"
                android:layout_marginBottom="10dp"
                android:maxLength="500"/>
            <com.syte.widgets.TvRobortoRegular
                android:id="@+id/xTvWrdLft"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="500"
                android:text="500 characters left"
                android:gravity="right"
                android:textColor="@color/color_black_opacity_26"
                android:textSize="@dimen/edittext_small_lbl_sz"
                android:layout_marginBottom="@dimen/add_syte_address_page_vertical_margin"/>
        </LinearLayout>
    </ScrollView>
    <!--END TOP BAR-->
    <com.syte.widgets.TvRobortoMedium
        android:id="@+id/xTvSave"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textSize="@dimen/add_syte_otional_details_button_txt_sz"
        android:textColor="@color/color_white"
        android:gravity="center"
        android:background="@color/color_orange"
        android:text="@string/add_syte_add_tm_mem_page_btn_save"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>